--- a/src/html/index.html
+++ b/src/html/index.html
@@ -60,12 +60,12 @@
 
     <header></header>
 
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="navbar-header">
-                        <a class="navbar-brand"><strong>hey-holis</strong></a>
+                        <a class="navbar-brand"><strong>Booking.com</strong></a>
                     </div>
                 </div>
             </div>
@@ -74,29 +74,77 @@
 
     <div id="wrapper">
         <div class="container">
-            <div class="row bg0">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h1 class="animated tada"><b>\o.o/<b></h1>
-                    <h3 class="animated flash">Hey there</h3>
 
-                    <h5>( HTML + SASS + JS ) => ( building tool )</h5>
-                    <p>Boilerplate galore</p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci sint possimus praesentium voluptatum ipsum cum ducimus vitae nihil facere, quia nobis voluptates ipsam dignissimos sequi, aspernatur dolore aut, fugit? Reiciendis!
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci sint possimus praesentium voluptatum ipsum cum ducimus vitae nihil facere, quia nobis voluptates ipsam dignissimos sequi, aspernatur dolore aut, fugit? Reiciendis!
-                    <h4>whatever</h4>
-                    <h4>whatever</h4>
+            <div class="row topspaced">
+                <div class="padded col-xs-12 col-sm-12 col-md-12 col-lg-12 bg0">
+                    availability
                 </div>
             </div>
+
+            <div class="row topspaced">
+                <div class="padded col-xs-4 col-sm-4 col-md-4 col-lg-4 bg2">
+                    check-in
+                </div>
+                <div class="padded col-xs-4 col-sm-4 col-md-4 col-lg-4 bg1">
+                    check-out
+                </div>
+                <div class="padded col-xs-4 col-sm-4 col-md-4 col-lg-4 bg3">
+                    check
+                </div>
+            </div>
+
+            <!-- quarto -->
+            <div class="row row-no-padding topspaced">
+                <div class="nopadding col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                    <img src="http://placehold.it/600x600" alt="" class="img-responsive" />
+                </div>
+                <div class="padded col-xs-6 col-sm-6 col-md-6 col-lg-6 bg2">
+                    <ul>
+                        <li>lorem</li>
+                        <li>ipsum</li>
+                        <li>whatever</li>
+                        <li>lorem</li>
+                        <li>ipsum</li>
+                        <li>whatever</li>
+                        <li>lorem</li>
+                        <li>ipsum</li>
+                        <li>whatever</li>
+                        <li>lorem</li>
+                        <li>ipsum</li>
+                        <li>whatever</li>
+                        <li>ipsum</li>
+                        <li>whatever</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row row-no-padding topspaced">
+
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 bg2">
+
+                    <span class="colhead">conditions</span>
+
+                    <ul>
+                        <li>lorem</li>
+                        <li>ipsum</li>
+                        <li>whatever</li>
+                        <li>lorem</li>
+                        <li>ipsum</li>
+                        <li>whatever</li>
+                    </ul>
+                </div>
+                <div class="padded col-xs-3 col-sm-3 col-md-3 col-lg-3 bg3">
+                    whatever
+                </div>
+                <div class="padded col-xs-3 col-sm-3 col-md-3 col-lg-3 bg3">
+                    whatever
+                </div>
+            </div>
+            <!-- /quarto -->
+
         </div>
     </div>
 
-    <div>whatever</div>
 
-
-    <div id="outsider" class="debug"></div>
-
-    <div class="debug begins-at-bottom">what</div>
 
     <footer></footer>
 
